Fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
   max-width: 100%;
 }
 
-/* @media (min-width: 375px) { */
 .container {
   display: flex;
   background: #ffff;
@@ -44,7 +43,6 @@ li {
 }
 
 .navi {
-  /* border: 2px solid; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -287,6 +285,7 @@ a:hover {
 
 .portfolio-modal-img img {
   width: 100%;
+  height: 550px;
   padding: 10px;
   align-self: center;
 }
@@ -821,8 +820,6 @@ h2 {
   background-color: #2230d2;
 }
 
-/* } */
-
 /* desktop version  */
 @media (min-width: 768px) {
   /* page 1  */
@@ -954,8 +951,7 @@ h2 {
     display: flex;
     justify-content: center;
     text-align: left;
-    width: 95%;
-    height: 1290px;
+    width: 1156px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
